fixed spacing issue

--- a/assets/css/daterangepicker.css
+++ b/assets/css/daterangepicker.css
@@ -4,8 +4,8 @@
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.20);
     border-radius: 5px;
-    width: 278px;
-    max-width: 725px;
+    width: 340px;
+    max-width: 585px;
     padding: 0;
     top: 100px;
     left: 20px;
@@ -127,9 +127,9 @@
     white-space: nowrap;
     text-align: center;
     vertical-align: middle;
-    min-width: 32px;
-    width: 32px;
-    height: 32px;
+    min-width: 24px;
+    width: 24px;
+    height: 24px;
     line-height: 1em;
     font-size: 1em;
     border-radius: 4px;
@@ -137,10 +137,11 @@
     white-space: nowrap;
     cursor: pointer;
     text-transform: capitalize;
+    padding: 10px;
+    -webkit-border-before: 1px solid transparent !important;
   }
   
   .daterangepicker .calendar-table {
-    border: 1px solid #fff;
     border-radius: 4px;
     background-color: #fff;
   }
