--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -24,7 +24,7 @@
   margin: 0 auto;
   z-index: 1;
   color: #0f172c;
-  font-size: 16px;
+  font-size: 1em;
   letter-spacing: 0.9px;
 }
 
@@ -35,6 +35,7 @@
   border-radius: 10px;
   letter-spacing: 0.9px;
   z-index: 1;
+  box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.20);
 }
 
 .cs-bw-booking-findhoteloptions {
@@ -45,12 +46,24 @@
   align-items: stretch;
   justify-content: center;
   width: 100%;
-  height: 46px;
+  height: auto;
 }
 .cs-bw-booking-findhoteloptions > * {
   width: 100%;
   position: relative;
   margin: 0 15px;
+}
+
+.cs-bw-booking-findhoteloptions > *:first-child {
+  margin-left: 0;
+}
+
+.cs-bw-booking-findhoteloptions > *:last-child {
+  margin-right: 0;
+}
+
+.cs-bw-booking-findhoteloptions > #booking-calendar {
+  margin-left: 0;
 }
 
 .cs-bw-booking-findhoteloptions .bw-input {
@@ -159,7 +172,7 @@
 
 .cs-bw-booking-datepicker .ui-datepicker {
   padding: 2rem 2rem 1rem 2rem;
-  font-size: 16px;
+  font-size: 1em;
   border: none;
   width: 664px !important;
   border-bottom-left-radius: 0;
@@ -177,7 +190,7 @@
 }
 
 .cs-bw-booking-datepicker .ui-datepicker .ui-datepicker-calendar {
-  font-size: 16px;
+  font-size: 1em;
   margin: 0;
   border-collapse: separate;
 }
@@ -189,7 +202,7 @@
 
 .cs-bw-booking-datepicker .ui-datepicker th {
   color: #838089;
-  font-size: 14px;
+  font-size: 0.875em;
   padding: 8px 0 12px 0;
   font-weight: 400;
   cursor: default;
@@ -289,7 +302,7 @@
   background-color: #000;
   border: none;
   font-weight: inherit;
-  font-size: 16px;
+  font-size: 1em;
   cursor: pointer;
 }
 
@@ -400,7 +413,7 @@
 .cs-bw-booking-chambre__remove-chamber button {
   display: flex;
   gap: 0.25rem;
-  font-size: 14px;
+  font-size: 0.875em;
   justify-content: center;
   align-items: center;
   cursor: pointer;
@@ -437,7 +450,7 @@
   background: #000;
   padding: 11px 24px;
   color: #fff;
-  font-size: 16px;
+  font-size: 1em;
   border-radius: 10px;
   border: none;
   cursor: pointer;
@@ -479,7 +492,7 @@
 .cs-bw-booking-chambre-childs-age__age {
   color: #838294;
   line-height: 20px;
-  font-size: 12px;
+  font-size: 0.750em;
 }
 
 .cs-bw-booking-chambre-childs-age-panel {
@@ -547,7 +560,7 @@
 .cs-bw-booking-select-container__label {
   position: absolute;
   transform: translate(0, 1.7rem) rotate(0) skew(0) skewY(0) scaleX(1) scaleY(1);
-  font-size: 12px;
+  font-size: 0.750em;
 }
 
 .cs-bw-booking-select-container__arrow {
@@ -630,7 +643,7 @@
   background: #000;
   padding: 11px 24px;
   color: #fff;
-  font-size: 16px;
+  font-size: 1em;
   border-radius: 10px;
   cursor: pointer;
   border: none;
